basic changes to names, wallets menu

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -40,6 +40,7 @@
   "upgrade": "Upgrade To PRO",
   "user": "User Profile",
   "vforms": "Validation Forms",
+  "wallets": "Wallets",
   "widgets": "Widgets",
   "wizard": "Wizard"
 }
