pages for orders swaps markets

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -21,11 +21,14 @@
   "maps": "Maps",
   "multi": "Multi Level Collapse",
   "notifications": "Notifications",
+  "orders": "Orders",
+  "orderbook": "Markets",
   "pages": "Pages",
   "plan": "Choose Plan",
   "pricing": "Pricing",
   "my-profile": "My Profile",
   "edit-profile": "Edit Profile",
+  "recentswaps": "Recent Swaps",
   "register": "Register Page",
   "rforms": "Regular Forms",
   "rtables": "Regular Tables",
