orders, recent swaps, minor other changes

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,7 +5,7 @@
   "charts": "Charts",
   "components": "Components",
   "ct": "CT",
-  "dashboard": "Dashboard",
+  "dashboard": "Demo Dashboard",
   "dtables": "Data Tables",
   "eforms": "Extended Forms",
   "error": "Error Page",
